--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,85 @@
-.App {
-  text-align: center;
+#test{
+  background-color: lightgrey;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+header{
+  display: flex;
+  background-color: black;
+  color: white;
+  height: 80px;
+  align-items: center;
+  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+#texto{
+  display: flex;
+  margin-left: 30px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container{
+  display: flex;
+  align-items: center;
+  font-size: 20px;
+  font-family: 'Times New Roman', Times, serif;
+  flex-direction: column;
+  gap: 20px;
+}
+
+#introducao{
+  display: flex;
+  width: 75%;
+  gap: 15px;
+  text-align: justify;
+  align-items: center;
+  background-color: white;
+  border-radius: 15px;
+  margin-top: 20px;
+}
+
+#habilidades{
+  display: flex;
+  flex-direction: row-reverse;
+  width: 75%;
+  gap:15px;
+  align-items: center;
+  font-weight: bold;
+  background-color: white;
+  border-radius: 15px;
+}
+
+#lista{
   display: flex;
   flex-direction: column;
+  width: 100%;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+#oportunidades{
+  display: flex;
+  width: 75%;
+  gap: 15px;
+  text-align: justify;
+  background-color: white;
+  border-radius: 15px;
+  align-items: center;
+}
+
+#ferramentas{
+  display: flex;
+  flex-direction: row-reverse;
+  width: 75%;
+  gap: 15px;
+  text-align: center;
+  background-color: white;
+  border-radius: 15px;
+  margin-bottom: 20px;
+  align-items: center;
+  
+}
+
+footer{
+  display: flex;
+  background-color: black;
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  justify-content: center;
 }
